# agent-execution-platform

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
contracts/: SimpleAccountFactory.sol  VerifyingPaymaster.sol  foundry.toml
contracts/src/: MinimalForwarder.sol  SimpleStaking.sol
migrations/: 001_init.sql  002_agent_wallets_and_api_keys.sql  002_unique_payment_tx_hash.sql  003_webhook_url.sql  004_platform_keys.sql
src/: lib.rs  main.rs
src/agent_wallet/: mod.rs
src/api/: mod.rs
src/api/middleware/: mod.rs
src/api/routes/: mod.rs
src/api/services/: mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/db/models/: mod.rs
src/execution_engine/: mod.rs
src/execution_engine/pricing/: mod.rs
src/execution_engine/simulation/: mod.rs
src/payments/: mod.rs
src/queue/: mod.rs
src/rate_limit/: mod.rs
src/relayer/: mod.rs  utils.rs
src/relayer/erc4337/: mod.rs
src/relayer/ethereum/: mod.rs
src/relayer/orchestrator/: mod.rs
src/relayer/paymaster/: mod.rs
src/types/: mod.rs
src/webhook/: mod.rs
src/worker/: mod.rs
tests/: README.md  integration_test.sh  integration_tests.rs
