[package]
name = "agent-execution-platform"
version = "0.1.0"
edition = "2021"
description = "AI Agent Blockchain Execution Platform — hackathon demo (synchronous, in-memory)"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Blockchain — ethers
ethers = { version = "2", features = ["legacy", "rustls"] }

# Logging / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for live price feeds)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dotenvy = "0.15"
hex = "0.4"
