[package]
name = "agent-execution-platform"
version = "1.0.0"
edition = "2021"
description = "AI Agent Blockchain Execution Platform — execute on-chain transactions for AI agents via relayer network"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "limit"] }
hyper = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Blockchain — ethers
ethers = { version = "2", features = ["legacy", "rustls"] }

# Logging / observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (price feeds)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
hex = "0.4"

# Concurrent data structures
dashmap = "6"

# Encryption (agent signing key storage)
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
